# ATE

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  setup-environment.sh
.github/: pull_request_template.md
ATE_client/data/: ate_client.ini  config.ini  vhat_client.ini
ATE_client/include/: api.h  api_aggregator.h  ate_API.h  ate_api.h  ate_interaction.h  error_defines.h  interaction.h  json_rpc_parser.h  squish.h
ATE_client/include/client_cli/: api_forwarder.h  application_context.h  ate_client_cli.h  converters.h  converters_from_cli.h  converters_to_cli.h  enums.h  errors.h  object.h  screen_point.h  (+2 more)
ATE_client/src/: CMakeLists.txt  api.cpp  api_aggregator.cpp  ate_API.cpp  ate_api.cpp  ate_api.h  ate_client.cpp  ate_client_main.cpp  ate_interaction.cpp  json_rpc_parser.cpp  squish.cpp  vhat_client.cpp
ATE_client/src/client_cli/: CMakeLists.txt  application_context.cpp  assembly_info.cpp  ate_client_cli.cpp  converters.cpp  converters_from_cli.cpp  converters_to_cli.cpp  errors.cpp  object.cpp  wildcard.cpp
ATE_client/src/client_python/: CMakeLists.txt  ate_client_python.cpp
ATE_client/src/squish/: application_context.cpp  squish_API.cpp  squish_types.cpp  wildcard.cpp
ATE_client/test/: CMakeLists.txt  application_context.cpp  ate_API.cpp  error_defines.cpp  json_rpc_parser.cpp
ATE_client/test/squish/: ate_interaction.cpp  squish_API.cpp  squish_types.cpp  wildcard.cpp
ATE_common/data/: config.ini
ATE_common/include/: ate_error.h  common.h  exceptions.h  rpc_error.h
ATE_common/src/: CMakeLists.txt  ate_error.cpp  common.cpp
ATE_common/src/config/: config.cpp
ATE_common/src/logger/: logger_setup.cpp
ATE_common/src/message_factory/: json_utils.cpp  message_factory.cpp
ATE_common/src/utils/: geometry_types.cpp  squish_types_converter.cpp
ATE_common/test/: CMakeLists.txt
ATE_common/test/common/: ate_error.cpp  common.cpp  exceptions.cpp
ATE_common/test/config/: config.cpp
ATE_common/test/data/config/: test_config.ini
ATE_common/test/data/logger/: invalid_level_bad_config.ini  invalid_size_bad_config.ini  rotating_files_good_config.ini
ATE_common/test/logger/: logger.cpp
ATE_common/test/message_factory/: message_factory.cpp  request.cpp  response.cpp
ATE_common/test/utils/: geometry_types.cpp  squish_types_converter.cpp
ATE_server/: ate_server_main.cpp
ATE_server/data/: ate_server.ini  config.ini  vhat_server.ini
ATE_server/include/: ate.h  ate_message_adapter.h  transport_adapters_collection.h
ATE_server/service/: postinst  prerm  vdp_ate_server.service.in  vdp_ate_server.service.legacy.in  vdp_vhat_server.service.in  vdp_vhat_server.service.legacy.in
ATE_server/src/: CMakeLists.txt  ate.cpp  ate_message_adapter.cpp  ate_server_main.cpp  transport_adapter.cpp  transport_adapters_collection.cpp
ATE_server/src/adapters/: db_manager_adapter.cpp  db_manager_factory.cpp  db_manager_factory.h
ATE_server/src/config/: config.cpp  config.ini
ATE_server/src/factory/: recognition_factory.cpp
ATE_server/src/interaction/: https_client.cpp  vdp_interaction.cpp
ATE_server/src/interaction/ATE/: sig_connection_manager.cpp  tcp_connection.cpp  tcp_connection_manager.cpp  tcp_server.cpp  tcp_session_handler.cpp  tcp_transport_adapter.cpp
ATE_server/src/interaction/DBUS/: dbus_connection_manager.cpp
ATE_server/src/interaction/SPI/: spi_interaction.cpp
ATE_server/src/interaction/VDP/: https_client.cpp  vdp_interaction.cpp
ATE_server/src/interaction/dummy/: dummy_interaction.cpp
ATE_server/src/server/: tcp_connection.cpp  tcp_server.cpp  tcp_session_handler.cpp
ATE_server/src/storage/: json_storage.cpp
ATE_server/src/utils/: ate_server_app_context.cpp  env_config.cpp  file_descriptor.cpp  gpio_reader.cpp  logger_setup.cpp  safe_env.cpp  screenshot_recorder.cpp  video_status.cpp
ATE_server/src/video_streaming/: framebuf_to_mat.cpp  gst_streamer.cpp  stream_reader.cpp  streamer_factory.cpp  sync_video_streamer.cpp  v4l_streamer.cpp
ATE_server/src/video_streaming/matching/: matcher.cpp  matching_factory.cpp  multiscale_template_detector.cpp  template_detector.cpp  text_detector.cpp  text_detector_decorator.cpp  text_detector_exceptions.cpp
ATE_server/test/: CMakeLists.txt
ATE_server/test/adapters/: db_manager_adapter.cpp
ATE_server/test/config/: config.cpp
ATE_server/test/data/storage/some_sync/: test_image_storage_spare.json
ATE_server/test/interaction/DBUS/: dbus_connection_manager.cpp
ATE_server/test/interaction/SPI/: spi_interaction.cpp
ATE_server/test/interaction/Signals/: sig_connection_manager.cpp
ATE_server/test/storage/: json_storage.cpp
ATE_server/test/utils/: env_config.cpp  file_descriptor.cpp  gpio_reader.cpp  safe_env.cpp  video_status.cpp
ATE_server/test/video_streaming/matching/: hausdorff_distance.cpp  matcher.cpp  template_detector.cpp  text_detector.cpp  text_detector_decorator.cpp
data/debian/: postinst  preinst  prerm
functional_tests/: api.py  ate.py  config_reader.py  conftest.py  params_handler.py  readme.md  requirements.txt  test_config.ini  tox.ini
functional_tests/allure-results/: categories.json
functional_tests/config/: def_sync_config.ini  sync3.b17288.800x480.d8.ini  sync4.r18_b19285.1920x1200.d12.ini  sync4.r18_b19285.800x1280.d10.ini  sync4.r18_b19285.800x480.d6.ini  sync_display_data.ini
functional_tests/pages/: hmi.py  interaction.py  page_supervisor.py  pages.py
functional_tests/tests/: helpers.py  import_helper_functions.py  test_failover_recovery.py
functional_tests/utils/: ATE_exception_handing.py  TSHMI_API.py  constants.py  get_benchmark.py  logger.py  path_joiner.py  report.py  resolution.py  server_setup.py  sftp_connection.py  ssh_commands.py  ssh_connect.py  wait_for_obj_benchmark.py
ide_integration/: vscode-linux-tasks.json
infrastructure/: build.cmake  build.sh  setup-environment.sh
infrastructure/build_dependencies/: CPackConfig.m4  debian-control.m4  leptonica.sh  opencv.sh  tesseract-trained-data.sh  tesseract.cmake  tesseract.sh  version.sh
infrastructure/ide_integration/: vscode-linux-tasks.json
(+191 files in other folders)
